fix details gap between media elements , video and images

--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -557,7 +557,7 @@ a.product__text {
   }
 
   .product__media-wrapper slider-component:not(.thumbnail-slider--no-slide) {
-    margin-left: -1.5rem;
+    margin-left: -3rem;
     margin-right: -1.5rem;
   }
 
